tested the service and the repository method